--- a/style.css
+++ b/style.css
@@ -47,4 +47,6 @@ button {
     padding: 5px 10px;
     font-size: 14px;
     cursor: pointer;
+    background-color:#FF0000;
+    color: #000000;
 }
