--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ h1 {
 .video-container {
     position: relative;
     width: 100%;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
-}
+    padding-bottom: 56.25%; 
 
 #player {
     position: absolute;
